[package]
name = "idle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#daemonize = "*"
#ipc-channel = "*"
#unix-ipc = { "version" = "*", "features" = ["serde", "bootstrap", "bootstrap-simple"]}
ipipe = { version = "0.11.7", features = ["channels"] }
chrono = "*"
#zbus = "2.2.0"
#serde = { version = "*", features = ["derive"]}
#tokio = { version = "*", features = ["full"]}

crossbeam = "0.8"

once_cell = "*"
lazy_static = "*"

#rayon = "*"
nix = "*"
execute = "0.2.11"
battery = "0.7"
num_enum = "0.5.7"
procfs = "0.12.0"
num_cpus = "1.13.1"
hhmmss = "*"
libc = "*"
image = { version = "^0.23.14", default-features = false, features = ["png"] }

panic_monitor = "*"

multiqueue = "0.3.2"
bus = "*"

itertools = "*"
itertools-num = "*"
semaphore = "*"

#drm-sys = "*"

[dependencies.drm]
version = "0.6.2"
#features = ["use_bindgen"]

#serde_macros = "*"
#serde = "*"

[release]
panic = 'abort'
